--- a/httpserver/.vscode/settings.json
+++ b/httpserver/.vscode/settings.json
@@ -51,6 +51,7 @@
         "cinttypes": "cpp",
         "utility": "cpp",
         "typeindex": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "random": "cpp"
     }
 }
